--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_left-nav.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_left-nav.html
@@ -115,7 +115,7 @@
 	                          <li><a href="/myPage/myPageMobile">모두보기</a></li>
 	                          <li><a href="/myPage/myWorkListMobile">나의 작품</a></li>
 	                          <li><a href="/myPage/show_off">자랑하기</a></li>
-	                          <li><a href="/myPage/exhint">전시후기&amp;소개</a></li>
+	                          <li><a href="/myPage/exhint">전시소개, 후기</a></li>
 	                          <li><a href="/myPage/issue">이슈</a></li>
 	                          <li><a href="/myPage/notis">알림함</a></li>
 	                          <li><a href="/myPage/scrap">스크랩</a></li>
