--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main_mo.html
@@ -101,56 +101,57 @@
         <div class="mypage_wrap">
             <h2>마이페이지</h2>
             <div class="mypage_contents">
-            	<div id ="left_menu"></div>
-                <div class="contents_left">
-                  <div class="myinfo_wrap">
-                    <div class="myinfo_pic"><img src="/resources/img/img_new/myinfo_da_pic.png" alt=""></div>
-                    <div class="myinfo_con">
-                      <ul>
-                        <li class="name">Dealing - Art <span></span></li>
-                        <li class="email">admin@dealing-art.com</li>
-                        <li class="mem_type">회원유형<span>컬렉터</span></li>
-                        <li class="line"></li>
-                        <li class="profile_modify"><a href="/myPage/memberEdit"><span></span>프로필 수정</a></li>
-                      </ul>
-                    </div>
-                    <div class="icon_box">
-                      <ul>
-                          <li><p class="ico_scrap"></p>스크랩<br><span>0</span></li>
-                          <li><p class="ico_good"></p>좋아요<br><span>0</span></li>
-                          <li><p class="ico_alarm"></p>알림<br><span>0</span></li>
-                      </ul>
-                    </div>
-                    <div class="icon_sns_box">
-                      <ul>
-                        <li><a href="#"><p class="ico_facebook"></p></a></li>
-                        <li><a href="#"><p class="ico_instagram"></p></a></li>
-                        <li><a href="#"><p class="ico_youtube"></p></a></li>
-                        <li> <a href="#"><p class="ico_twitter"></p></a></li>
-                      </ul>
-                    </div>                    
-                  </div>
-                  <div class="left_nav">
-                    <ul>
-                      <li class="on"><a href="#">마이페이지</a>
-                      </li>
-                      <li>
+            	<div id ="left_menu">
+	                <div class="contents_left">
+	                  <div class="myinfo_wrap">
+	                    <div class="myinfo_pic"><img src="/resources/img/img_new/myinfo_da_pic.png" alt=""></div>
+	                    <div class="myinfo_con">
 	                      <ul>
-	                          <li><a href="#">모두보기</a></li>
-	                          <li><a href="#">나의 작품</a></li>
-	                          <li><a href="#">자랑하기</a></li>
-	                          <li><a href="#">전시 소개&후기</a></li>
-	                          <li><a href="#">이슈</a></li>
-	                          <li><a href="#">알림함</a></li>
-	                          <li><a href="#">스크랩</a></li>
-	                          <li><a href="#">팔로잉</a></li>
-	                        </ul>
-                       </li>
-                      <li class="off"><a href="#">거래</a></li>
-                      <li class="off"><a href="#">작가</a></li>
-                      <li class="off"><a href="#">나의 정보</a></li>
-                    </ul>
-                  </div>
+	                        <li class="name">Dealing - Art <span></span></li>
+	                        <li class="email">admin@dealing-art.com</li>
+	                        <li class="mem_type">회원유형<span>컬렉터</span></li>
+	                        <li class="line"></li>
+	                        <li class="profile_modify"><a href="/myPage/memberEdit"><span></span>프로필 수정</a></li>
+	                      </ul>
+	                    </div>
+	                    <div class="icon_box">
+	                      <ul>
+	                          <li><p class="ico_scrap"></p>스크랩<br><span>0</span></li>
+	                          <li><p class="ico_good"></p>좋아요<br><span>0</span></li>
+	                          <li><p class="ico_alarm"></p>알림<br><span>0</span></li>
+	                      </ul>
+	                    </div>
+	                    <div class="icon_sns_box">
+	                      <ul>
+	                        <li><a href="#"><p class="ico_facebook"></p></a></li>
+	                        <li><a href="#"><p class="ico_instagram"></p></a></li>
+	                        <li><a href="#"><p class="ico_youtube"></p></a></li>
+	                        <li> <a href="#"><p class="ico_twitter"></p></a></li>
+	                      </ul>
+	                    </div>                    
+	                  </div>
+	                  <div class="left_nav">
+	                    <ul>
+	                      <li class="on"><a href="#">마이페이지</a>
+	                      </li>
+	                      <li>
+		                      <ul>
+		                          <li><a href="#">모두보기</a></li>
+		                          <li><a href="#">나의 작품</a></li>
+		                          <li><a href="#">자랑하기</a></li>
+		                          <li><a href="#">전시 소개&후기</a></li>
+		                          <li><a href="#">이슈</a></li>
+		                          <li><a href="#">알림함</a></li>
+		                          <li><a href="#">스크랩</a></li>
+		                          <li><a href="#">팔로잉</a></li>
+		                        </ul>
+	                       </li>
+	                      <li class="off"><a href="#">거래</a></li>
+	                      <li class="off"><a href="#">작가</a></li>
+	                      <li class="off"><a href="#">나의 정보</a></li>
+	                    </ul>
+	                  </div>
+	                </div>
                 </div>
                 <div class="contents_right">
                   <div class="mypage_works_wrap">
