--- a/src/main/resources/templates/thymeleaf/fo/community/community_home_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_home_mo.html
@@ -107,7 +107,7 @@
                 <ul>
                     <li><a href="/community/mainMobile" class="over">홈</a></li>
                     <li><a href="/community/worksListMobile">작품자랑</a></li>
-                    <li><a href="/community/exhintListMobile">전시 소개&후기</a></li>
+                    <li><a href="/community/exhintListMobile">전시소개, 후기</a></li>
                     <li><a href="/community/issueListMobile">이슈</a></li>
                     <li><a href="/community/eventMobile">이벤트</a></li>   
                 </ul>
@@ -172,7 +172,7 @@
             <div class="posts_warp">
                 <div class="intro_posts">
                     <div class="tit_wrap">
-                        <h2><img src="/resources/img/img_new/ico_intro.png" alt=""><span>전시후기 / 소개 베스트 게시물</span></h2>
+                        <h2><img src="/resources/img/img_new/ico_intro.png" alt=""><span>전시소개, 후기 베스트 게시물</span></h2>
                         <button class="btn_more" onclick="btnMore('EXH');">더보기</button>
                     </div>
                     <ol>
