대리 박아름 issue_mo 검색조건 겹침현상 CSS 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue.html
@@ -151,7 +151,8 @@
                                 <option value="past">과거 순</option>
                             </select>
                         </div>
-                        <div class="sel_sorting right170">
+                        <!-- <div class="sel_sorting right170"> (2023.10.24 박아름 수정)-->
+                        <div class="sel_sorting">
                             <select name="sel_open" id="sel_open">
                                 <option value="all">형태</option>
                                 <option value="Y">공개</option>
