--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
@@ -2305,10 +2305,10 @@ function myWorkReg(){
 			        		 console.log("======> " + data);
     			        	if(data == 1){
     			        		modalAlertShow("작품이 등록되었습니다.", "");
-    			        		location.href='/myPage/workList';
+    			        		location.href='/myPage/show_off';
     			        	}else if(data > 1){
     			        		modalAlertShow("작품이 등록되었습니다.", "");
-    			        		location.href='/myPage/workList';
+    			        		location.href='/myPage/show_off';
     			        	}else{
     			        		modalAlertShow("작품 등록에 실패했습니다. 다시 시도해주세요.", "reload");
     			        	}
