6. [W/M > 마이페이지 > 게시물 등록] 오류&수정사항 // REPLY 수정사항 건 요류사항 수정 커밋

--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
@@ -228,16 +228,19 @@
 							</div>
 						</div>
 					</div>
-					<!--  2023.10.12일 홍충기 - 버튼 이미지 변경  -->		
-					<div class="bat-box5">
-	               	   <button type="button" class="ba-btn1" onclick="myexhibitReg()"><span>등록</span></button>
-	                   <button type="button" class="ba-btn3" onclick="myexhibitStorage()"><span>임시저장</span></button>
-	                   <button type="button" class="ba-btn3" onclick="exhibitPreview()"><span>미리보기</span></button>
-	                   <button type="button" class="ba-btn3" onclick="javascript:history.back()"><span>취소</span></button>
-	               </div>
+					<!--  2023.10.12일 홍충기 - 버튼 이미지 변경  -->	
+					<div class="mypage_contents">	
+						<div class="btn_regi_area">
+							<ul>
+			                	<li><button type="button" class="registration" onclick="myexhibitReg()"><span>등록</span></button></li>
+			                 	<li><button type="button" onclick="myexhibitStorage()"><span>임시저장</span></button></li>
+			                  	<li><button type="button" onclick="exhibitPreview()"><span>미리보기</span></button></li>
+			                   	<li><button type="button" onclick="javascript:history.back()"><span>취소</span></button></li>
+		                   	</ul>
+		            	</div>
+		        	</div>
 				</div>
 			</div>
-
 		</div>
 		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 	</div>
