--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_page2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_issue_page2.html
@@ -186,13 +186,17 @@
                      </div>
                   </div>
                </div>
-               <!-- 2023.10.12 홍충기 - 버튼 이미지 변경 -->                     
-               <div class="bat-box5">
-               	   <button type="button" class="ba-btn1" onclick="myknowhowReg()"><span>등록</span></button>
-                   <button type="button" class="ba-btn3" onclick="myknowhowStorage()"><span>임시저장</span></button>
-                   <button type="button" class="ba-btn3" onclick="issuePreview()"><span>미리보기</span></button>
-                   <button type="button" class="ba-btn3" onclick="goBack()"><span>취소</span></button>
-               </div>
+               <!-- 2023.10.12 홍충기 - 버튼 이미지 변경 -->   
+               <div class="mypage_contents">	
+					<div class="btn_regi_area">
+						<ul>
+		                	<li><button type="button" class="registration" onclick="myknowhowReg()"><span>등록</span></button></li>
+		                 	<li><button type="button" onclick="myknowhowStorage()"><span>임시저장</span></button></li>
+		                  	<li><button type="button" onclick="issuePreview()"><span>미리보기</span></button></li>
+		                   	<li><button type="button" onclick="goBack()"><span>취소</span></button></li>
+	                   	</ul>
+	            	</div>
+		      </div>                  
             </div>
          </div>
       </div>
