--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_showingoff.html
@@ -296,6 +296,7 @@ $("document").ready(function(){
 	searchOptions.comtTypCd ="BOA";
 	searchOptions.startIndex = startIndex;
 	searchOptions.searchStep = searchStep;
+	searchOptions.sortCd = "past";
 	
 	ShowListAjax();
 
